Fixes scrolling issue by setting overflow-y:scroll on div#content_wrapper

--- a/geocamCore/static/geocamCore/css/base.css
+++ b/geocamCore/static/geocamCore/css/base.css
@@ -165,6 +165,7 @@ div#wrapper {
 
 div#content_wrapper {
     position:fixed;
+    overflow-y:scroll;
     bottom:34px;
     width:100%;
     top:48px;
